<resources>

    <string name="app_name">eCentric Toast Activity</string>
    <string name="user_name">Android Activity</string>
    <string name="uname">Android Developer:-</string>
     <string name="uname_hint">abc</string>
     <string name="pwd">iOS Devloper:-</string>
     <string name="pwd_hint">xyz</string>
      <string name="email">Web Developer:-</string>
       <string name="email_hint">pqr</string>
    <string name="pass_word">iOS Activity</string>
    <string name="e_mail">Web Activity</string>
    <string name="heading">Click on Devloper</string>
    <string name="heading_uname">Android Developer Screen</string>
    <string name="heading_pwd">iOS Developer Screen</string>
    <string name="heading_email">Web Developer Screen</string>
    <string name="btn_uname">Android</string>
     <string name="btn_pwd">iOS</string>
      <string name="btn_email">Web Apps</string>
      <string name="done">Enter</string>

</resources>