<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading" 
        android:background="#77003C"
        android:padding="10dp"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:gravity="center"/>
    <Button
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/btn_uname"
		android:id="@+id/unameBtn"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:padding="10dp"
	/>
    <Button
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/btn_pwd"
		android:id="@+id/pwdBtn"
		android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:padding="10dp"
	/>
    <Button
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/btn_email"
		android:id="@+id/emailBtn"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center"
        android:padding="10dp"
	/>	
</LinearLayout>