<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" 
        android:padding="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:text="@string/uname"
            android:padding="10dp"
            android:textColor="#09420A"/>
        <EditText 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/uname_hint"
            android:id="@+id/uname_edt"/>
    </LinearLayout>
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:id="@+id/name_btn"
    	android:text="@string/done"
        android:padding="5dp"
        android:textSize="20sp"
        android:gravity="center"/>

</LinearLayout>