<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" 
        android:padding="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:text="@string/pwd"
            android:padding="10dp"
            android:textColor="#09420A"/>
        <EditText 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:id="@+id/pwd_edt"/>
    </LinearLayout>
	<Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:id="@+id/pass_btn"
    	android:text="@string/done"
        android:padding="5dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center"/>
</LinearLayout>